# lebai-sdk

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  CMakeSettings.json  Dockerfile  Doxyfile  Doxyfile.in  LICENSE  README.en.md  README.md  TODO.md  config.hh.in  lebaiConfig.cmake.in  requirements.txt
.cache/clangd/index/: address.hpp.1CABD2DDBFE70B50.idx  address.hpp.6BD339230BB8668E.idx  address.ipp.7FB76A7B313A77AC.idx  address_v4.hpp.8EA78FDC2394626A.idx  address_v4.hpp.B9D664CDD4326D61.idx  address_v4.ipp.37F161404FCB36A4.idx  address_v4_iterator.hpp.B08828A37AF75D8F.idx  address_v4_range.hpp.A3D58D88A21277C9.idx  address_v6.hpp.13FFA920D04494F2.idx  address_v6.hpp.A064EC5E4BCC868D.idx  address_v6.ipp.5119FEC27378F848.idx  address_v6_iterator.hpp.2C5E83724F54A901.idx  address_v6_range.hpp.AD3E76F1A90BF4FF.idx  alloc.hpp.8D775C9F53A04982.idx  (+587 more)
.devcontainer/: DevDockerfile  devcontainer.json
.github/workflows/: auditwheel.yml  build.yml  cpp_build.yml  cpp_release.yml  dotnet_build.yml  dotnet_release.yml  java_build.yml  java_release.yml  lebai-sdk.yml  linux_aarch64_cpp_build.yml  linux_cpp_arm64_release.yml  linux_cpp_build.yml  linux_cpp_release.yml  linux_dotnet_build.yml  linux_dotnet_release.yml  linux_java_build.yml  linux_python_aarch64_build.yml  linux_python_aarch64_release.yml  linux_python_build.yml  linux_python_release.yml  manylinux.yaml  manylinux.yml  python_build.yml  python_release.yml  release.yml  windows_cpp_build.yml  windows_cpp_release.yml  windows_dotnet_build.yaml  windows_dotnet_build.yml  windows_dotnet_release.yaml  windows_dotnet_release.yml  windows_python_build.yml  windows_python_release.yml
build-format/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  clang-format.vcxproj  clang-format.vcxproj.filters  cmake_install.cmake  lebai.sln  lebaiConfig.cmake  lebaiConfigVersion.cmake
build-format/examples/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
build-format/sdk/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  lebai-cpp.vcxproj  lebai-cpp.vcxproj.filters
cmake/: CMakeLists.txt.swig  cpp.cmake  dotnet.cmake  fix_dotnet_dllimports.cmake  java.cmake  lebai-sdkConfig.cmake.in  python.cmake  python2.cmake  swig.cmake
doc/: architecture.md  bindings.md  build-and-test.md  changelog.md  develop.md  dotnet.md  faq.md  python.md
docs/: agent-guide.md  architecture.md  bindings.md  build-and-test.md  changelog.md  develop.md  dotnet.md  faq.md  java.md  python.md  rpc-protocol.md
dotnet/: Directory.Build.props.in  Example.csproj.in  RobotFacade.cs  Test.csproj.in  lebai.csproj.in  lebai.runtime.csproj.in
examples/: CMakeLists.txt  README.md  example.cc  example.cs  example.java  example.py  example_dummy.cc  example_gripper.cc  example_gripper.cs  example_gripper.java  example_gripper.py  example_lua_robot.cc  example_online_move.cc  example_speedl.cc  multi_thread.cc  test_gripper_diagnostics.cc
examples/discovery/: DiscoveryExample.cs  DiscoveryExample.java  discovery.cc  discovery.py
examples/gripper/: GripperExample.cs  GripperExample.java  gripper.py
examples/robot/: RobotExample.cs  RobotExample.java  claw.cc  robot.cc  robot.py
java/: Loader.java  Robot.java  pom-example.xml.in  pom-full.xml.in  pom-local.xml.in  pom-native.xml.in  pom-test.xml.in
python/: pyproject.toml.in  setup.py  setup.py.in
python/pylebai/: __init__.py  robot.py
scripts/: build_python_wheels_manylinux.sh  dotnet_pack_multirid.sh  dotnet_smoke_local_package.sh  python_wheel_smoke.ps1  python_wheel_smoke.sh
sdk/: CMakeLists.txt
sdk/dotnet/: CMakeLists.txt  gripper.i  jsonbase.i  l_master.i  motion.i  posture.i  zeroconf.i
sdk/include/lebai/: discovery.hh  gripper.hh  lebai.hh  lua_robot.hh  robot.hh
sdk/include/lebai-sdk/: jsonbase.hh  motion.hh  posture.hh  robot.hh
sdk/java/: CMakeLists.txt  common.i  gripper.i  jsonbase.i  l_master.i
sdk/python/: CMakeLists.txt  CMakeLists.txt.backup  common.i  gripper.i  jsonbase.i  l_master.i  motion.i  posture.i  robot.i  std_tuple.i  zeroconf.i
sdk/src/: base64.hh  discovery.cc  discovery_impl.cc  discovery_impl.hh  gripper.cc  gripper_impl.cc  gripper_impl.hh  http_jsonrpc_connector.hh  jsonbase.cc  jsonrpc_connector.cc  jsonrpc_connector.hh  lua_robot.cc  lua_robot_impl.cc  lua_robot_impl.hh  modbus_rtu_client.cc  modbus_rtu_client.hh  motion.cc  posture.cc  robot.cc  robot_impl.cc  robot_impl.hh  rpc_client.hh  websocket.hh
sdk/src/protos/: block.cc  block.hh  claw.cc  claw.hh  control.cc  control.hh  db.cc  db.hh  dynamic.cc  dynamic.hh  file.cc  file.hh  io.cc  io.hh  jsonbase.cc  jsonbase.hh  kinematic.cc  kinematic.hh  led.cc  led.hh  modbus.cc  modbus.hh  motion.cc  motion.hh  posture.cc  posture.hh  safety.cc  safety.hh  serial.cc  serial.hh  signal.cc  signal.hh  storage.cc  storage.hh  system.cc  system.hh  utils.cc  utils.hh
sdk/src/protos_json/: auto_proto.hh  backup_proto.hh  claw_proto.hh  control_proto.hh  db_proto.hh  dynamic_proto.hh  file_proto.hh  flange_proto.hh  hardware_proto.hh  io_proto.hh  kin_factor_proto.hh  kinematic_proto.hh  led_proto.hh  message_proto.hh  modbus_proto.hh  motion_proto.hh  motor_proto.hh  multi_devices_proto.hh  network_proto.hh  plugin_proto.hh  posture_proto.hh  quality_proto.hh  safety_proto.hh  serial_proto.hh  shortcut_proto.hh  signal_proto.hh  storage_proto.hh  structure_proto.hh  subscribe_proto.hh  system_proto.hh  trigger_proto.hh  upgrade_proto.hh
sdk/test/: CMakeLists.txt  test_cmake_dependency_boundaries.cmake  test_discovery.cc  test_dotnet_ci_aggregation.cmake  test_dotnet_packaging_templates.cmake  test_examples_layout.cmake  test_java_ci_release.cmake  test_java_facade_packaging.cmake  test_json_protos.cc  test_lua_robot.cc  test_modbus_rtu_client.cc  test_protos.cc  test_python_ci_aggregation.cmake  test_python_facade_packaging.cmake  test_robot.cc  test_rpc_client.cc  test_workflow_layout.cmake
sdk/third/: mdns.h
third/websocketpp/: connection.hpp
(+10 files in other folders)
